<resources>
    <string name="app_name">Canvas</string>
    <string name="action_settings">Settings</string>
    <string name="action_rectangle">Draw Rectangle</string>
    <string name="action_line">Draw Line</string>
    <string name="action_color">Choose Color</string>
    <string name="action_clear">Clear</string>
    <string name="action_about">About</string>
    <string name="action_save">Save File</string>
    <string name="action_load">Load File</string>
    <string name="color_title">Pick the color of your choice</string>
    <string name="color_button_label">Return</string>
    <string name="color_textview_label">Color Selected</string>
    <string name="develop_title">Developers</string>
    <string name="developer1">Antonio Ramos</string>
    <string name="developer2">Gary Larson</string>
    <string name="image_source">Chromatic Wheel Image Creator=gustavorezende
        License = Public domain</string>
    <string name = "url">URL = https://openclipart.org/detail/181642/chromatic-wheel-2</string>
    <string name="about">About Canvas</string>
    <string-array name="lineWeight_spinner">
        <item name="one">1</item>
        <item name="two">2</item>
        <item name="three">3</item>
        <item name="four">4</item>
        <item name="five">5</item>
        <item name="six">6</item>
        <item name="seven">7</item>
    </string-array>
    <string name="title_activity_color">ColorActivity</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="save_dialog_title">Enter a File Name</string>
    <string name="save_dialog_edit_view">File Name</string>

</resources>
