<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.antonioramos.canvas.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_line"

        android:orderInCategory="50"

        android:title="@string/action_line" />
    <item
        android:id="@+id/action_rectangle"
        android:orderInCategory="60"
        android:title="@string/action_rectangle" />
    <item
        android:id="@+id/action_color"
        android:orderInCategory="80"
        android:title="@string/action_color"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_clear"
        android:orderInCategory="90"
        android:title="@string/action_clear"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="120"
        android:title="@string/action_about"
        app:showAsAction="never" />
</menu>
